feat(server): switched from gin to fiber. feat(client): updated api client and socket connection
